<resources>
    <string name="app_name">New Feeds App</string>

    <string name="explore">Explore</string>
    <string name="live_chat">Live Chat</string>
    <string name="gallery">Gallery</string>
    <string name="wish_list">Wish List</string>
    <string name="e_magazine">  E-Magazine</string>
    <string name="nav_header_title">welcome</string>
    <string name="nav_header_subtitle">User Name</string>
    <string name="open_website">open website</string>

</resources>