<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_explore"
            android:title="@string/explore" />
        <item
            android:id="@+id/nav_liveChat"
            android:icon="@drawable/ic_chat"
            android:title="@string/live_chat"
            />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />

        <item
            android:id="@+id/nav_wishList"
            android:icon="@drawable/ic_heart"
            android:title="@string/wish_list" />

        <item
            android:id="@+id/nav_magazine"
            android:icon="@drawable/ic_e_magazine"
            android:title="@string/e_magazine" />

    </group>
</menu>